added h1 heading and paragraph below and copied featurettes from index.html

--- a/climate.html
+++ b/climate.html
@@ -205,16 +205,39 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <p class="lead">Coming soon</p>
+	<h1>Climate change in the past</h1>
+        <p class="lead">The geologic record of Earth's environmental history holds great potential as a test of the limits of climate change. Recently, a new tool was developed that allows us to directly measure ocean temperatures in the past. I used this tool, carbonate clumped isotopes, to test whether changes in ocean temperature were responsible for a perturbation to the global marine ecosystem 400 million years ago.</p>
       </div>
 
-        
+      <!-- START THE FEATURETTES -->
 
-<!--     <hr> -->
+      <hr class="featurette-divider">
+
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/examples/quantitative.JPG">
+        <h2 class="featurette-heading">Quantitative background. </h2>
+        <p class="lead">I complemented my science focus with a solid background in math: statistics, multivariable calculus, linear algebra &amp; differential equations, mechanics and E&amp;M for physics majors, and intro computer science. My research is also highly quantitative. I made frequent use of MATLAB and R for data processing, performed regressions and hypothesis tests to characterize relationships, and became an expert at propagating error. </p>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/examples/team_player.JPG">
+        <h2 class="featurette-heading">Team player. </h2>
+        <p class="lead">Research is a highly collaborative process, so I often found myself brainstorming with, teaching or learning from colleagues. As captain of my high school cross country team, I learned to motivate and build camaraderie among many runners of varying ability. As captain and coxswain of my college intramural crew team, I relished the challenge of judging from the anguished grimaces on my rowers' faces whether to push them harder or let them rest easy. </p>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <!-- /END THE FEATURETTES -->
 
 
-
-
+      <!-- FOOTER -->
+      <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p></p>
+      </footer>
+    
     </div><!-- /.container -->
 
 
