--- a/climate.html
+++ b/climate.html
@@ -211,7 +211,7 @@
 
       <!-- START THE FEATURETTES -->
 
-      <hr class="featurette-divider">
+<!--      <hr class="featurette-divider"> -->
 
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/examples/quantitative.JPG">
@@ -219,7 +219,7 @@
         <p class="lead">I complemented my science focus with a solid background in math: statistics, multivariable calculus, linear algebra &amp; differential equations, mechanics and E&amp;M for physics majors, and intro computer science. My research is also highly quantitative. I made frequent use of MATLAB and R for data processing, performed regressions and hypothesis tests to characterize relationships, and became an expert at propagating error. </p>
       </div>
 
-      <hr class="featurette-divider">
+<!--      <hr class="featurette-divider"> -->
 
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/examples/team_player.JPG">
