added the problem featurette with zachos figure

--- a/climate.html
+++ b/climate.html
@@ -125,7 +125,7 @@
     ------------------------- */
 
     .featurette-divider {
-      margin: 0px 0; /* Space out the Bootstrap <hr> more */
+      margin: 20px 0; /* Space out the Bootstrap <hr> more */
     }
     .featurette {
       padding-top: 0px; /* Vertically center images part 1: add padding above and below text. */
@@ -214,9 +214,9 @@
       <hr class="featurette-divider"> 
 
       <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/examples/quantitative.JPG">
-        <h2 class="featurette-heading">Quantitative background. </h2>
-        <p class="lead">I complemented my science focus with a solid background in math: statistics, multivariable calculus, linear algebra &amp; differential equations, mechanics and E&amp;M for physics majors, and intro computer science. My research is also highly quantitative. I made frequent use of MATLAB and R for data processing, performed regressions and hypothesis tests to characterize relationships, and became an expert at propagating error. </p>
+        <img class="featurette-image pull-left" src="assets/img/zachos.jpg">
+        <h2 class="featurette-heading">The problem</h2>
+        <p class="lead">Many scientific studies have used the oxygen isotopic composition, δ18O, of fossils as a proxy for ocean temperatures in the past. However, when large ice sheets form near the poles, they change the δ18O of the ocean, making this temperature proxy unreliable. In this figure, the δ18O proxy suggests that the temperature of the modern ocean is less than freezing, which is not the case. To accurately measure past ocean temperatures, we need a better proxy. </p>
       </div>
 
       <hr class="featurette-divider"> 
