added methods section with diagram of clumped and mass spec

--- a/climate.html
+++ b/climate.html
@@ -223,8 +223,8 @@
 
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/examples/team_player.JPG">
-        <h2 class="featurette-heading">Team player. </h2>
-        <p class="lead">Research is a highly collaborative process, so I often found myself brainstorming with, teaching or learning from colleagues. As captain of my high school cross country team, I learned to motivate and build camaraderie among many runners of varying ability. As captain and coxswain of my college intramural crew team, I relished the challenge of judging from the anguished grimaces on my rowers' faces whether to push them harder or let them rest easy. </p>
+        <h2 class="featurette-heading">Methods</h2>
+        <p class="lead">Carbonate clumped isotope thermometry provides a temperature that is independent of the δ18O of the ocean. This means that carbonate clumped isotopes are a much more reliable proxy than the δ18O of carbonate. Temperature affects the thermodynamic equilibrium between carbonate ions with only one heavy isotope and carbonate ions with a "clump" of two heavy isotopes. This equilibrium is recorded by shelly animals living in the ocean, which can then be fossilized. To measure the clumped isotope composition of a fossil, I dissolved it in phosphoric acid to release carbon dioxide, and then measured the isotopes of this gas using a mass spectrometer. </p>
       </div>
 
       <hr class="featurette-divider">
