changed picture to the right figure

--- a/climate.html
+++ b/climate.html
@@ -222,7 +222,7 @@
       <hr class="featurette-divider"> 
 
       <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/examples/team_player.JPG">
+        <img class="featurette-image pull-left" src="assets/img/methods.jpg">
         <h2 class="featurette-heading">Methods</h2>
         <p class="lead">Carbonate clumped isotope thermometry provides a temperature that is independent of the δ18O of the ocean. This means that carbonate clumped isotopes are a much more reliable proxy than the δ18O of carbonate. Temperature affects the thermodynamic equilibrium between carbonate ions with only one heavy isotope and carbonate ions with a "clump" of two heavy isotopes. This equilibrium is recorded by shelly animals living in the ocean, which can then be fossilized. To measure the clumped isotope composition of a fossil, I dissolved it in phosphoric acid to release carbon dioxide, and then measured the isotopes of this gas using a mass spectrometer. </p>
       </div>
