--- a/climate.html
+++ b/climate.html
@@ -229,6 +229,14 @@
 
       <hr class="featurette-divider">
 
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/samples.jpg">
+        <h2 class="featurette-heading">Samples</h2>
+        <p class="lead">433 million years ago, the global oceans underwent a severe perturbation. We know this because many animals went extinct, and the δ13C of marine carbonates shifted sharply, suggesting a large change in the availability of phytoplankton, an important part of the marine food chain. I used clumped isotopes to investigate whether this perturbation was caused by rapid climate change. I measured the clumped isotope composition of marine organisms that were living 433 million years ago at the edge of a tropical sea. The organisms were buried in the mud and fossilized, and were collected from cliffs on the island of Gotland, Sweden. </p>
+      </div>
+
+      <hr class="featurette-divider">
+
       <!-- /END THE FEATURETTES -->
 
 
