added results section and ellipses figure

--- a/climate.html
+++ b/climate.html
@@ -206,7 +206,7 @@
       <!-- Jumbotron -->
       <div class="jumbotron">
 	<h1>Climate change in the past</h1>
-        <p class="lead">The geologic record of Earth's environmental history holds great potential as a test of the limits of climate change. Recently, a new tool was developed that allows us to directly measure ocean temperatures in the past. I used this tool, carbonate clumped isotopes, to test whether changes in ocean temperature were responsible for a perturbation to the global marine ecosystem 400 million years ago.</p>
+        <p class="lead">The geologic record of Earth's environmental history holds great potential as a test of the limits of climate change. Recently, a new tool was developed that allows us to directly measure ocean temperatures in the past. I used this tool, carbonate clumped isotopes, to test whether changes in ocean temperature were responsible for a perturbation to the global marine ecosystem 433 million years ago.</p>
       </div>
 
       <!-- START THE FEATURETTES -->
@@ -232,7 +232,15 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/samples.jpg">
         <h2 class="featurette-heading">Samples</h2>
-        <p class="lead">433 million years ago, the global oceans underwent a severe perturbation. We know this because many animals went extinct, and the δ13C of marine carbonates shifted sharply, suggesting a large change in the availability of phytoplankton, an important part of the marine food chain. I used clumped isotopes to investigate whether this perturbation was caused by rapid climate change. I measured the clumped isotope composition of marine organisms that were living 433 million years ago at the edge of a tropical sea. The organisms were buried in the mud and fossilized, and were collected from cliffs on the island of Gotland, Sweden. </p>
+        <p class="lead">433 million years ago, the global oceans underwent a severe perturbation. We know this because many animals went extinct, and the δ13C of marine carbonates shifted sharply, suggesting a large change in the availability of phytoplankton (an important part of the marine food chain). I used clumped isotopes to investigate whether this perturbation was caused by rapid climate change. I measured the clumped isotope composition of marine organisms that were living 433 million years ago at the edge of a tropical sea. The organisms were buried in the mud and fossilized, and then collected from cliffs on the island of Gotland, Sweden. </p>
+      </div>
+
+      <hr>
+
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/results.jpg">
+        <h2 class="featurette-heading">Results</h2>
+        <p class="lead">Clumped isotope results confirmed that there is a large range in preservation quality among the samples. Hotter samples tend to have higher δ18O, suggesting that they were recrystallized deep underground, which erased the record of ocean temperature and instead recorded the temperature of hot hydrothermal fluids. The most pristine sample has a temperature of 30°C, similar to modern tropical oceans. Because so many samples were poorly preserved, I was not able to test for a change in temperature during the global marine ecosystem perturbation, so the cause of this phenomenon remains a mystery. </p>
       </div>
 
       <hr class="featurette-divider">
