changed limits to effects in climate.html, added links to each of my 3 research pages to index.html

--- a/climate.html
+++ b/climate.html
@@ -206,7 +206,7 @@
       <!-- Jumbotron -->
       <div class="jumbotron">
 	<h1>Climate change in the past</h1>
-        <p class="lead">The geologic record of Earth's environmental history holds great potential as a test of the limits of climate change. Recently, a new tool was developed that allows us to directly measure ocean temperatures in the past. I used this tool, carbonate clumped isotopes, to test whether changes in ocean temperature were responsible for a perturbation to the global marine ecosystem 433 million years ago.</p>
+        <p class="lead">The geologic record of Earth's environmental history holds great potential as a test of the effects of climate change. Recently, a new tool was developed that allows us to directly measure ocean temperatures in the past. I used this tool, carbonate clumped isotopes, to test whether changes in ocean temperature were responsible for a perturbation to the global marine ecosystem 433 million years ago.</p>
       </div>
 
       <!-- START THE FEATURETTES -->
@@ -243,7 +243,7 @@
         <p class="lead">Clumped isotope results can often be difficult to interpret because the clumped isotope composition of a fossil can be reset if the fossil is dissolved and then recrystallized. To test for recrystallization of my samples, I used a scanning electron microscope to map the orientation of calcite crystals in the fossils. The linear features in the shell mapped in the upper part of the figure indicate original crystal structure, meaning this shell is very well preserved. The coral skeleton mapped in the lower part of the figure has a large light-blue area, indicated by the arrow, which has likely been recrystallized. These figures demonstrate that some fossils are well-preserved, while others are not. </p>
       </div>
 
-      <hr>
+      <hr class="featurette-divider">
 
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/results.jpg">
