--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <img class="featurette-image pull-right" src="assets/img/examples/environmental.jpg">
         <h2 class="featurette-heading">Environmental scientist. </h2>
         <p class="lead">I have an M.S. in geobiology from Caltech and a B.A. in Earth and planetary sciences from Harvard, which means my coursework focused on environmental science, geochemistry, and microbiology. </p>
-        <p class="lead"> I also have four years of research experience in the environmental sciences. <a href="/research.html">Read more about my research.</a> </p>
+        <p class="lead"> I also have four years of research experience in the environmental sciences. Read more about my research on <a href="/climate.html">past climate</a>,  <a href="/methane.html">methane-oxidizing microbes</a>, or <a href="/metabolism.html">ancient microbial metabolism</a>. </p>
       </div>
 
       <hr class="featurette-divider">
