added periods in jumbotron in index and copied climate to metabolism and methane.html changing the jumbotron text

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <h1>Hi, I'm Renata</h1>
-        <p class="lead">I'm a recent master's graduate seeking an entry-level environmental consultant or analyst position</p>
+        <h1>Hi, I'm Renata.</h1>
+        <p class="lead">I'm a recent master's graduate seeking an entry-level environmental consultant or analyst position.</p>
 <!--        <a class="btn btn-large btn-success" href="#">Get started today</a> -->
       </div>
 
