--- a/metabolism.html
+++ b/metabolism.html
@@ -31,15 +31,15 @@
 
       /* Main marketing message and sign up button */
       .jumbotron {
-        margin: 80px 0;
+        margin: 40px 0;
         text-align: left;
       }
       .jumbotron h1 {
-        font-size: 60px;
+        font-size: 40px;
         line-height: 1;
       }
       .jumbotron .lead {
-        font-size: 24px;
+        font-size: 21px;
         line-height: 1.25;
       }
       .jumbotron .btn {
@@ -125,7 +125,7 @@
     ------------------------- */
 
     .featurette-divider {
-      margin: 80px 0; /* Space out the Bootstrap <hr> more */
+      margin: 20px 0; /* Space out the Bootstrap <hr> more */
     }
     .featurette {
       padding-top: 0px; /* Vertically center images part 1: add padding above and below text. */
@@ -145,7 +145,7 @@
 
     /* Thin out the marketing headings */
     .featurette-heading {
-      font-size: 50px;
+      font-size: 40px;
       font-weight: 300;
       line-height: 1;
       letter-spacing: -1px;
@@ -205,16 +205,63 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-        <p class="lead">Coming soon</p>
+	<h1>Microbial sulfate reduction: an ancient metabolism</h1>
+        <p class="lead">Many aspects of the past environment can be inferred from their effects on life. Sulfate-reducing bacteria have lived in the world's oceans for over 3 billion years, and they have left a record of their response to environmental conditions in the sulfur isotopic composition of sedimentary rocks. With the aim of improving our ability to interpret this record, my senior thesis focused on characterizing the effects of different environmental conditions on the fractionation of sulfur isotopes by sulfate-reducing bacteria.</p>
       </div>
 
-        
+      <!-- START THE FEATURETTES -->
 
-<!--     <hr> -->
+<!--      <hr class="featurette-divider"> 
+
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/zachos.jpg">
+        <h2 class="featurette-heading">The problem</h2>
+        <p class="lead">Many scientific studies have used the oxygen isotopic composition, δ18O, of fossils as a proxy for ocean temperatures in the past. However, when large ice sheets form near the poles, they change the δ18O of the ocean, making this temperature proxy unreliable. In this figure, the δ18O proxy suggests that the temperature of the modern ocean is less than freezing, which is not the case. To accurately measure past ocean temperatures, we need a better proxy. </p>
+      </div>
+
+      <hr class="featurette-divider"> 
+
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/methods.jpg">
+        <h2 class="featurette-heading">Methods</h2>
+        <p class="lead">Carbonate clumped isotope thermometry provides a temperature that is independent of the δ18O of the ocean. This means that carbonate clumped isotopes are a much more reliable proxy than the δ18O of carbonate. Temperature affects the thermodynamic equilibrium between carbonate ions with only one heavy isotope and carbonate ions with a "clump" of two heavy isotopes. This equilibrium is recorded by shelly animals living in the ocean, which can then be fossilized. To measure the clumped isotope composition of a fossil, I dissolved it in phosphoric acid to release carbon dioxide, and then measured the isotopes of this gas using a mass spectrometer. </p>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/samples.jpg">
+        <h2 class="featurette-heading">Samples</h2>
+        <p class="lead">433 million years ago, the global oceans underwent a severe perturbation. We know this because many animals went extinct, and the δ13C of marine carbonates shifted sharply, suggesting a large change in the availability of phytoplankton (an important part of the marine food chain). I used clumped isotopes to investigate whether this perturbation was caused by rapid climate change. I measured the clumped isotope composition of marine organisms that were living 433 million years ago at the edge of a tropical sea. The organisms were buried in the mud and fossilized, and then collected from cliffs on the island of Gotland, Sweden. </p>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/preservation.jpg">
+        <h2 class="featurette-heading">Sample preservation</h2>
+        <p class="lead">Clumped isotope results can often be difficult to interpret because the clumped isotope composition of a fossil can be reset if the fossil is dissolved and then recrystallized. To test for recrystallization of my samples, I used a scanning electron microscope to map the orientation of calcite crystals in the fossils. The linear features in the shell mapped in the upper part of the figure indicate original crystal structure, meaning this shell is very well preserved. The coral skeleton mapped in the lower part of the figure has a large light-blue area, indicated by the arrow, which has likely been recrystallized. These figures demonstrate that some fossils are well-preserved, while others are not. </p>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/results.jpg">
+        <h2 class="featurette-heading">Results</h2>
+        <p class="lead">Clumped isotope results confirmed that there is a large range in preservation quality among the samples. Hotter samples tend to have higher δ18O, suggesting that they were recrystallized deep underground, which erased the record of ocean temperature and instead recorded the temperature of hot hydrothermal fluids. The most pristine sample has a temperature of 30°C, similar to modern tropical oceans. Because so many samples were poorly preserved, I was not able to test for a change in temperature during the global marine ecosystem perturbation, so the cause of this phenomenon remains a mystery. </p>
+      </div>
+
+      <hr class="featurette-divider">
+-->
+      <!-- /END THE FEATURETTES -->
 
 
-
-
+      <!-- FOOTER -->
+      <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p></p>
+      </footer>
+    
     </div><!-- /.container -->
 
 
