in metabolism changed container > hr margin to 20px and in index made new container class inside of jumbotron max-width 600px

--- a/metabolism.html
+++ b/metabolism.html
@@ -26,7 +26,7 @@
         max-width: 1000px;
       }
       .container > hr {
-        margin: 60px 0;
+        margin: 20px 0;
       }
 
       /* Main marketing message and sign up button */
@@ -205,7 +205,7 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
-	<h1>Microbial sulfate reduction: an ancient metabolism</h1>
+	<h1>Sulfate reduction: an ancient metabolism</h1>
         <p class="lead">Many aspects of the past environment can be inferred from their effects on life. Sulfate-reducing bacteria have lived in the world's oceans for over 3 billion years, and they have left a record of their response to environmental conditions in the sulfur isotopic composition of sedimentary rocks. With the aim of improving our ability to interpret this record, my senior thesis focused on characterizing the effects of different environmental conditions on the fractionation of sulfur isotopes by sulfate-reducing bacteria.</p>
       </div>
 
