--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
         font-size: 21px;
         padding: 14px 24px;
       }
+      .jumbotron .container {
+        max-width: 600px;
+      }
+
 
       /* Supporting marketing content */
       .marketing {
@@ -206,10 +210,12 @@
 
       <!-- Jumbotron -->
       <div class="jumbotron">
+      <div class="container">
         <h1>Hi, I'm Renata.</h1>
         <p class="lead">I'm a recent master's graduate seeking an entry-level environmental consultant or analyst position.</p>
 <!--        <a class="btn btn-large btn-success" href="#">Get started today</a> -->
-      </div>
+      </div><!-- /.container -->
+      </div><!-- /.jumbotron -->
 
 <!--     <hr> -->
 
