added problem statement to methane and figure

--- a/methane.html
+++ b/methane.html
@@ -211,44 +211,44 @@
 
       <!-- START THE FEATURETTES -->
 
-<!--      <hr class="featurette-divider"> 
+      <hr class="featurette-divider"> 
 
       <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/zachos.jpg">
+        <img class="featurette-image pull-left" src="assets/img/methane_problem.png">
         <h2 class="featurette-heading">The problem</h2>
-        <p class="lead">Many scientific studies have used the oxygen isotopic composition, δ18O, of fossils as a proxy for ocean temperatures in the past. However, when large ice sheets form near the poles, they change the δ18O of the ocean, making this temperature proxy unreliable. In this figure, the δ18O proxy suggests that the temperature of the modern ocean is less than freezing, which is not the case. To accurately measure past ocean temperatures, we need a better proxy. </p>
+        <p class="lead">Up to 25% of the gobal production of methane occurs in ocean sediments. Before it even leaves the sediments, more than 90% of this methane is consumed by a symbiotic process between methane-oxidizing archaea and sulfate-reducing bacteria (SRB). The SRB are thought to take up the waste products (metabolites) of the archaea, allowing the archaea to continue consuming methane. This likely explains why the SRB are often found in a layer around a clump of archaea, as shown in the bottom right corner of the figure. After years of scientific study, the nature of the metabolites passed between the archaea and the SRB is still unknown. </p>
       </div>
 
       <hr class="featurette-divider"> 
 
-      <div class="featurette">
+<!--      <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/methods.jpg">
-        <h2 class="featurette-heading">Methods</h2>
-        <p class="lead">Carbonate clumped isotope thermometry provides a temperature that is independent of the δ18O of the ocean. This means that carbonate clumped isotopes are a much more reliable proxy than the δ18O of carbonate. Temperature affects the thermodynamic equilibrium between carbonate ions with only one heavy isotope and carbonate ions with a "clump" of two heavy isotopes. This equilibrium is recorded by shelly animals living in the ocean, which can then be fossilized. To measure the clumped isotope composition of a fossil, I dissolved it in phosphoric acid to release carbon dioxide, and then measured the isotopes of this gas using a mass spectrometer. </p>
+        <h2 class="featurette-heading">A potential solution</h2>
+        <p class="lead"> </p>
       </div>
 
       <hr class="featurette-divider">
 
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/samples.jpg">
-        <h2 class="featurette-heading">Samples</h2>
-        <p class="lead">433 million years ago, the global oceans underwent a severe perturbation. We know this because many animals went extinct, and the δ13C of marine carbonates shifted sharply, suggesting a large change in the availability of phytoplankton (an important part of the marine food chain). I used clumped isotopes to investigate whether this perturbation was caused by rapid climate change. I measured the clumped isotope composition of marine organisms that were living 433 million years ago at the edge of a tropical sea. The organisms were buried in the mud and fossilized, and then collected from cliffs on the island of Gotland, Sweden. </p>
+        <h2 class="featurette-heading">Methods</h2>
+        <p class="lead"> </p>
       </div>
 
       <hr class="featurette-divider">
 
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/preservation.jpg">
-        <h2 class="featurette-heading">Sample preservation</h2>
-        <p class="lead">Clumped isotope results can often be difficult to interpret because the clumped isotope composition of a fossil can be reset if the fossil is dissolved and then recrystallized. To test for recrystallization of my samples, I used a scanning electron microscope to map the orientation of calcite crystals in the fossils. The linear features in the shell mapped in the upper part of the figure indicate original crystal structure, meaning this shell is very well preserved. The coral skeleton mapped in the lower part of the figure has a large light-blue area, indicated by the arrow, which has likely been recrystallized. These figures demonstrate that some fossils are well-preserved, while others are not. </p>
+        <h2 class="featurette-heading">Results</h2>
+        <p class="lead"> </p>
       </div>
 
       <hr class="featurette-divider">
 
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/results.jpg">
-        <h2 class="featurette-heading">Results</h2>
-        <p class="lead">Clumped isotope results confirmed that there is a large range in preservation quality among the samples. Hotter samples tend to have higher δ18O, suggesting that they were recrystallized deep underground, which erased the record of ocean temperature and instead recorded the temperature of hot hydrothermal fluids. The most pristine sample has a temperature of 30°C, similar to modern tropical oceans. Because so many samples were poorly preserved, I was not able to test for a change in temperature during the global marine ecosystem perturbation, so the cause of this phenomenon remains a mystery. </p>
+        <h2 class="featurette-heading">A new metabolic model</h2>
+        <p class="lead"> </p>
       </div>
 
       <hr class="featurette-divider">
