added potential solution section with figure

--- a/methane.html
+++ b/methane.html
@@ -216,20 +216,20 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/methane_problem.png">
         <h2 class="featurette-heading">The problem</h2>
-        <p class="lead">Up to 25% of the gobal production of methane occurs in ocean sediments. Before it even leaves the sediments, more than 90% of this methane is consumed by a symbiotic process between methane-oxidizing archaea and sulfate-reducing bacteria (SRB). The SRB are thought to take up the waste products (metabolites) of the archaea, allowing the archaea to continue consuming methane. This likely explains why the SRB are often found in a layer around a clump of archaea, as shown in the bottom right corner of the figure. After years of scientific study, the nature of the metabolites passed between the archaea and the SRB is still unknown. </p>
+        <p class="lead">Up to 25% of the gobal production of methane occurs in ocean sediments. Before it even leaves the sediments, more than 90% of this methane is consumed by a symbiotic process between methane-oxidizing archaea and sulfate-reducing bacteria (SRB). The SRB are thought to take up the waste products (metabolites) of the archaea, allowing the archaea to continue consuming methane. This likely explains why the SRB are often found in a layer around a clump of archaea, as shown in the bottom left corner of the figure. After years of scientific study, the nature of the metabolites passed between the archaea and the SRB is still unknown. </p>
       </div>
 
       <hr class="featurette-divider"> 
 
-<!--      <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/methods.jpg">
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/methane_zhang.png">
         <h2 class="featurette-heading">A potential solution</h2>
-        <p class="lead"> </p>
+        <p class="lead">Lipids are molecules that make up the membrane around bacterial cells. Bacteria make lipids by transferring hydrogen atoms from the food they eat to an intermediate molecule, NAD(P)H, and finally to the building blocks that make up the lipids. In some species of bacteria, the hydrogen isotopic composition (δD) of lipids has been shown to reflect the type of food they eat. Results from one previous experiment with the species C. necator are shown in the figure; the colored bars representing the three different food sources have clearly different values. I tested a pure culture of SRB, closely related to the partner SRB in the methane-consuming consortia, for a similar relationship between their food source and the δD of their lipids. </p>
       </div>
 
       <hr class="featurette-divider">
 
-      <div class="featurette">
+<!--      <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/samples.jpg">
         <h2 class="featurette-heading">Methods</h2>
         <p class="lead"> </p>
