--- a/methane.html
+++ b/methane.html
@@ -229,15 +229,15 @@
 
       <hr class="featurette-divider">
 
-<!--      <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/samples.jpg">
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/methane_methods.png">
         <h2 class="featurette-heading">Methods</h2>
-        <p class="lead"> </p>
+        <p class="lead">Sulafte-reducing bacteria die if they are exposed to oxygen, so I grew the SRB in airtight bottles flushed with pure nitrogen to get rid of all the oxygen. I tracked the growth of the SRB by staining and counting cells under a microscope. When the culture was growing well, I extracted the lipids and characterized their structures using a mass spectrometer. I then used a different mass spectrometer to measure the δD of lipids that are uniquely made by SRB. </p>
       </div>
 
       <hr class="featurette-divider">
 
-      <div class="featurette">
+<!--      <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/preservation.jpg">
         <h2 class="featurette-heading">Results</h2>
         <p class="lead"> </p>
