--- a/methane.html
+++ b/methane.html
@@ -237,18 +237,18 @@
 
       <hr class="featurette-divider">
 
-<!--      <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/preservation.jpg">
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/methane_results.png">
         <h2 class="featurette-heading">Results</h2>
-        <p class="lead"> </p>
+        <p class="lead">The δD of the three lipid structures tested was very similar for all three of the food sources I used. Compared to the results from the species C. necator, the δD is essentially constant and independent of the food source in SRB. These results suggest that the δD of lipids made by the SRB partners in the methane-oxidizing consortia will not be diagnostic of the food source of the SRB partners, and therefore will not shed light onto the metabolites passed between the two symbiotic partners.To unravel the inner workings of this crucial symbiosis, a different method will need to be developed. </p>
       </div>
 
       <hr class="featurette-divider">
 
       <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/results.jpg">
+        <img class="featurette-image pull-left" src="assets/img/methane_model.jpg">
         <h2 class="featurette-heading">A new metabolic model</h2>
-        <p class="lead"> </p>
+        <p class="lead">Although my results did not address my original question, their implications for the metabolism of SRB are still interesting. I presented a new metabolic model to explain my results. In this model, SRB have an large number of NAD(P)H molecules inside their cells, which collectively act as carriers of hydrogen atoms from food to the lipids. Because there are many NAD(P)H molecules, the turnover of the NAD(P)H is not very fast, leaving time for the δD of the NAD(P)H to equilibrate with the water inside of the cell. This equilibration would erase any differences in δD caused by different food sources, explaining the observed constant δD across the three tested food sources. </p>
       </div>
 
       <hr class="featurette-divider">
