fixed some typos

--- a/methane.html
+++ b/methane.html
@@ -206,7 +206,7 @@
       <!-- Jumbotron -->
       <div class="jumbotron">
 	<h1>Methane-oxidizing microbial consortia</h1>
-        <p class="lead">Huge amounts of methane, a potent greenhouse gas, are prevented from reaching the atmosphere by the action of microbial consortia living in the ocean sediments. The symbiotic relationship between the two microbial partners in these consortia, which probably involves the exchange of metabolites between partners, is poorly understood. I tested for a relationship between carbon metabolism and the hydrogen isotopic composition (δD) of lipids in one of the microbial partners, which could shed light on the nature of the metabolites exchanged between the partners.</p>
+        <p class="lead">Huge amounts of methane, a potent greenhouse gas, are prevented from reaching the atmosphere by the action of microbial consortia living in ocean sediments. The symbiotic relationship between the two microbial partners in these consortia, which probably involves the exchange of metabolites between partners, is poorly understood. I tested for a relationship between carbon metabolism and the hydrogen isotopic composition (δD) of lipids in one of the microbial partners, which could shed light on the nature of the metabolites exchanged between the partners.</p>
       </div>
 
       <!-- START THE FEATURETTES -->
@@ -240,7 +240,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/methane_results.png">
         <h2 class="featurette-heading">Results</h2>
-        <p class="lead">The δD of the three lipid structures tested was very similar for all three of the food sources I used. Compared to the results from the species C. necator, the δD is essentially constant and independent of the food source in SRB. These results suggest that the δD of lipids made by the SRB partners in the methane-oxidizing consortia will not be diagnostic of the food source of the SRB partners, and therefore will not shed light onto the metabolites passed between the two symbiotic partners.To unravel the inner workings of this crucial symbiosis, a different method will need to be developed. </p>
+        <p class="lead">The δD of the three lipid structures tested was very similar for all three of the food sources I used. Compared to the results from the species C. necator, the δD is essentially constant and independent of the food source in SRB. These results suggest that the δD of lipids made by the SRB partners in the methane-oxidizing consortia will not be diagnostic of the food source of the SRB partners, and therefore will not shed light onto the metabolites passed between the two symbiotic partners. To unravel the inner workings of this crucial symbiosis, a different method will need to be developed. </p>
       </div>
 
       <hr class="featurette-divider">
@@ -252,7 +252,7 @@
       </div>
 
       <hr class="featurette-divider">
--->
+
       <!-- /END THE FEATURETTES -->
 
 
