added problem section to metabolism and figure

--- a/metabolism.html
+++ b/metabolism.html
@@ -211,17 +211,17 @@
 
       <!-- START THE FEATURETTES -->
 
-<!--      <hr class="featurette-divider"> 
+      <hr class="featurette-divider"> 
 
       <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/zachos.jpg">
+        <img class="featurette-image pull-left" src="assets/img/metabolism_problem.png">
         <h2 class="featurette-heading">The problem</h2>
-        <p class="lead">Many scientific studies have used the oxygen isotopic composition, δ18O, of fossils as a proxy for ocean temperatures in the past. However, when large ice sheets form near the poles, they change the δ18O of the ocean, making this temperature proxy unreliable. In this figure, the δ18O proxy suggests that the temperature of the modern ocean is less than freezing, which is not the case. To accurately measure past ocean temperatures, we need a better proxy. </p>
+        <p class="lead">Sulfate-reducing bacteria live in the sediments at the bottom of the ocean, take up sulfate from seawater, and reduce it to sulfide. When given the chance, they preferentially take up lighter isotopes of sulfur, generating a difference in the isotopic composition (δ34S) of sulfate and sulfide. Environmental conditions, such as availability of sulfate and food, temperature, or oxygen concentrations, can affect the bacteria's ability to express this preference for lighter isotopes. The δ34S of sulfate and the δ34S of sulfide, which are therefore functions of environmental conditions, are stored in sulfur minerals and can be measured billions of years later. However, before we can interpret this record in terms of environmental conditions, we must have an accurate model of the bacterial sulfate reduction metabolism, so we can predict how different environmental conditions in the past would have affected the difference in δ34S between sulfate and sulfide. </p>
       </div>
 
       <hr class="featurette-divider"> 
 
-      <div class="featurette">
+<!--      <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/methods.jpg">
         <h2 class="featurette-heading">Methods</h2>
         <p class="lead">Carbonate clumped isotope thermometry provides a temperature that is independent of the δ18O of the ocean. This means that carbonate clumped isotopes are a much more reliable proxy than the δ18O of carbonate. Temperature affects the thermodynamic equilibrium between carbonate ions with only one heavy isotope and carbonate ions with a "clump" of two heavy isotopes. This equilibrium is recorded by shelly animals living in the ocean, which can then be fossilized. To measure the clumped isotope composition of a fossil, I dissolved it in phosphoric acid to release carbon dioxide, and then measured the isotopes of this gas using a mass spectrometer. </p>
