--- a/metabolism.html
+++ b/metabolism.html
@@ -221,15 +221,15 @@
 
       <hr class="featurette-divider"> 
 
-<!--      <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/methods.jpg">
-        <h2 class="featurette-heading">Methods</h2>
-        <p class="lead">Carbonate clumped isotope thermometry provides a temperature that is independent of the δ18O of the ocean. This means that carbonate clumped isotopes are a much more reliable proxy than the δ18O of carbonate. Temperature affects the thermodynamic equilibrium between carbonate ions with only one heavy isotope and carbonate ions with a "clump" of two heavy isotopes. This equilibrium is recorded by shelly animals living in the ocean, which can then be fossilized. To measure the clumped isotope composition of a fossil, I dissolved it in phosphoric acid to release carbon dioxide, and then measured the isotopes of this gas using a mass spectrometer. </p>
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/metabolism_rees.png">
+        <h2 class="featurette-heading">The standard model</h2>
+        <p class="lead">In the standard model of the sulfate reduction metabolism, sulfate is brought into the cell, activated, and reduced to sulfite (SO3). Importantly, the sulfite is then reduced directly to sulfide. We do not know how strongly this last step in the reduction discriminates against heavy isotopes of sulfur, or what fraction of the sulfite is re-oxidized to sulfate. To determine these unknowns, I grew pure cultures of sulfate-reducing bacteria with sulfite as the sulfur source instead of sulfate. </p>
       </div>
 
       <hr class="featurette-divider">
 
-      <div class="featurette">
+<!--      <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/samples.jpg">
         <h2 class="featurette-heading">Samples</h2>
         <p class="lead">433 million years ago, the global oceans underwent a severe perturbation. We know this because many animals went extinct, and the δ13C of marine carbonates shifted sharply, suggesting a large change in the availability of phytoplankton (an important part of the marine food chain). I used clumped isotopes to investigate whether this perturbation was caused by rapid climate change. I measured the clumped isotope composition of marine organisms that were living 433 million years ago at the edge of a tropical sea. The organisms were buried in the mud and fossilized, and then collected from cliffs on the island of Gotland, Sweden. </p>
