added unexpected intermediate section with figure

--- a/metabolism.html
+++ b/metabolism.html
@@ -229,26 +229,26 @@
 
       <hr class="featurette-divider">
 
-<!--      <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/samples.jpg">
-        <h2 class="featurette-heading">Samples</h2>
-        <p class="lead">433 million years ago, the global oceans underwent a severe perturbation. We know this because many animals went extinct, and the δ13C of marine carbonates shifted sharply, suggesting a large change in the availability of phytoplankton (an important part of the marine food chain). I used clumped isotopes to investigate whether this perturbation was caused by rapid climate change. I measured the clumped isotope composition of marine organisms that were living 433 million years ago at the edge of a tropical sea. The organisms were buried in the mud and fossilized, and then collected from cliffs on the island of Gotland, Sweden. </p>
+      <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/metabolism_unexpected.png">
+        <h2 class="featurette-heading">Unexpected byproducts</h2>
+        <p class="lead">In the cultures grown with sulfite, an intermediate sulfur species appeared in the media, in addition to the expected sulfide. This intermediate species was thiosulfate (S2O3), which contains one zero-valent sulfur atom bonded to a sulfite molecule. The thiosulfate could have been formed by abiotic chemical reactions in the media, or by the bacteria as a metabolic intermediate. To tell the difference between these two mechanisms of formation, I had to delevop a new extraction protocol to separately measure the isotopic composition of the two individual sulfur atoms in thiosulfate.  </p>
       </div>
 
       <hr class="featurette-divider">
 
-      <div class="featurette">
+<!--      <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/preservation.jpg">
-        <h2 class="featurette-heading">Sample preservation</h2>
-        <p class="lead">Clumped isotope results can often be difficult to interpret because the clumped isotope composition of a fossil can be reset if the fossil is dissolved and then recrystallized. To test for recrystallization of my samples, I used a scanning electron microscope to map the orientation of calcite crystals in the fossils. The linear features in the shell mapped in the upper part of the figure indicate original crystal structure, meaning this shell is very well preserved. The coral skeleton mapped in the lower part of the figure has a large light-blue area, indicated by the arrow, which has likely been recrystallized. These figures demonstrate that some fossils are well-preserved, while others are not. </p>
+        <h2 class="featurette-heading">Isotope results</h2>
+        <p class="lead"> </p>
       </div>
 
       <hr class="featurette-divider">
 
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/results.jpg">
-        <h2 class="featurette-heading">Results</h2>
-        <p class="lead">Clumped isotope results confirmed that there is a large range in preservation quality among the samples. Hotter samples tend to have higher δ18O, suggesting that they were recrystallized deep underground, which erased the record of ocean temperature and instead recorded the temperature of hot hydrothermal fluids. The most pristine sample has a temperature of 30°C, similar to modern tropical oceans. Because so many samples were poorly preserved, I was not able to test for a change in temperature during the global marine ecosystem perturbation, so the cause of this phenomenon remains a mystery. </p>
+        <h2 class="featurette-heading">Metabolic implications</h2>
+        <p class="lead"> </p>
       </div>
 
       <hr class="featurette-divider">
