--- a/metabolism.html
+++ b/metabolism.html
@@ -231,21 +231,21 @@
 
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/metabolism_unexpected.png">
-        <h2 class="featurette-heading">Unexpected byproducts</h2>
-        <p class="lead">In the cultures grown with sulfite, an intermediate sulfur species appeared in the media, in addition to the expected sulfide. This intermediate species was thiosulfate (S2O3), which contains one zero-valent sulfur atom bonded to a sulfite molecule. The thiosulfate could have been formed by abiotic chemical reactions in the media, or by the bacteria as a metabolic intermediate. To tell the difference between these two mechanisms of formation, I had to delevop a new extraction protocol to separately measure the isotopic composition of the two individual sulfur atoms in thiosulfate.  </p>
-      </div>
-
-      <hr class="featurette-divider">
-
-<!--      <div class="featurette">
-        <img class="featurette-image pull-left" src="assets/img/preservation.jpg">
-        <h2 class="featurette-heading">Isotope results</h2>
-        <p class="lead"> </p>
+        <h2 class="featurette-heading">Unexpected byproduct</h2>
+        <p class="lead">In the cultures grown with sulfite, an intermediate sulfur species appeared in the media, in addition to the expected sulfide. This intermediate species was thiosulfate (S2O3), which contains one sulfur atom with a +4 oxidation state and one zero-valent sulfur atom. The thiosulfate could have been formed by abiotic chemical reactions in the media, or by the bacteria as a metabolic intermediate. To tell the difference between these two mechanisms of formation, I delevoped a new extraction protocol to separately measure the isotopic composition of the two individual sulfur atoms in thiosulfate.  </p>
       </div>
 
       <hr class="featurette-divider">
 
       <div class="featurette">
+        <img class="featurette-image pull-left" src="assets/img/metabolism_isotopes.png">
+        <h2 class="featurette-heading">Isotope results</h2>
+        <p class="lead">The δ34S of sulfite and sulfide are as expected, with the sulfide slightly depleted in heavy isotopes compared to the starting material, sulfite. As the figure demonstrates, the two sulfur atoms in thiosulfate have dramatically different δ34S. This means that the thiosulfate must have been formed by the bacteria as a metabolic intermediate, because abiotic reactions are not known to be capable of producing such a large difference in δ34S. </p>
+      </div>
+
+      <hr class="featurette-divider">
+
+<!-->      <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/results.jpg">
         <h2 class="featurette-heading">Metabolic implications</h2>
         <p class="lead"> </p>
