--- a/metabolism.html
+++ b/metabolism.html
@@ -248,7 +248,7 @@
       <div class="featurette">
         <img class="featurette-image pull-left" src="assets/img/metabolism_bradley.png">
         <h2 class="featurette-heading">Metabolic implications</h2>
-        <p class="lead">The standard model of the sulfate reduction metabolism cannot explain the formation of thiosulfate as a metabolic intermediate during the reduction of sulfite, because in the standard model, sulfite is reduced to sulfide in a single step. Therefore, these results can only be explained by a more complicated model in which sulfite is reduced via a series of separate steps. More work is still needed to measure the isotopic discrimination associated with each step in this more complex model, but these results bring us one step closer to an environmental interpretation of the geologic record of sulfur isotopes. </p>
+        <p class="lead">The standard model of the sulfate reduction metabolism cannot explain the formation of thiosulfate as a metabolic intermediate during the reduction of sulfite, because in the standard model, sulfite is reduced to sulfide in a single step. Therefore, these results can only be explained by a more complicated model in which sulfite is reduced via a series of separate steps. More work is still needed to measure the isotopic discrimination associated with each step in this more complex model, but these results bring us closer to an environmental interpretation of the geologic record of sulfur isotopes. </p>
       </div>
 
       <hr class="featurette-divider">
